# SDL2GameEngine

./: CMakeLists.txt  README.md
SDL2 Game Engine/: CMakeLists.txt  SDL2 Game Engine.sln
SDL2 Game Engine/SDL2 Game Engine/: Main.cpp  SDL2 Game Engine.vcxproj  SDL2 Game Engine.vcxproj.filters
SDL2 Game Engine/SDL2 Game Engine/assets/maps/: platformerMap.map
SDL2 Game Engine/SDL2 Game Engine/include/: Collision.h  Map.h  Physics.h  TextureManager.h  Vector2D.h
SDL2 Game Engine/SDL2 Game Engine/include/ECS/: Components.h  EntityComponentSystem.h  SpriteComponent.h  UILabelComponent.h
SDL2 Game Engine/SDL2 Game Engine/src/: Map.cpp  TextureManager.cpp  Vector2D.cpp
SDL2 Game Engine/include/: AbstractGame.h  Animation.h  AssetManager.h  Game.h  GameStateManager.h
SDL2 Game Engine/include/ECS/: AudioComponent.h  ColliderComponent.h  Rigidbody2DComponent.h  TileComponent.h  TransformComponent.h
SDL2 Game Engine/include/ECS/GameSpecific/: PickupComponent.h  PlayerComponent.h  ScoreComponent.h
SDL2 Game Engine/src/: AbstractGame.cpp  AssetManager.cpp  Collision.cpp  Game.cpp
SDL2 Game Engine/src/ECS/: EntityComponentSystem.cpp
SDL2 Game Engine/src/ECS/GameSpecific/: PlayerComponent.cpp
